--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 node_modules
 # Keep environment variables out of version control
 .env
+
+# Client dependencies
+client/node_modules
+
+# testing
+client/coverage
+
+# production
+client/build
