--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An online Pizza ordering Application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +15,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "concurrently": "^6.2.1",
+    "nodemon": "^2.0.12",
     "prisma": "^2.28.0"
   }
 }
